# jumpstats

./: .gitignore  Cargo.ci.toml  Cargo.toml
.github/workflows/: release.yml
js_client/: Cargo.toml  build.rs
js_client/src/: auth.rs  config.rs  game_launch.rs  main.rs  parser.rs  sign.rs  update.rs
shared/: Cargo.toml
shared/bindings/: BlockThreshold.ts  DailyBlockRecord.ts  DailyRecord.ts  DistanceThreshold.ts  MyTopBlockRecord.ts  MyTopRecord.ts  Threshold.ts  TopBlockRecord.ts  TopRecord.ts
shared/src/: jump.rs  lib.rs  messages.rs
