[package]
name = "js_client"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10"
tokio = {version = "1.50.0", features = ["full"]}
webbrowser = "1.2.0"
sysinfo = "0.38.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
shared = { path = "../shared" }
anyhow = "1.0.102"
directories = "6.0.0"
tray-item = "0.10"
rfd = "0.17.2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.3"
obfstr = "0.4.4"
chrono = "0.4.44"
hex-literal = "1.1.0"

[build-dependencies]
winres = "0.1"